# cydsp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build-publish.yml  ci.yml
demos/: demo_analysis.py  demo_composed.py  demo_daisysp_filters.py  demo_delay.py  demo_distortion.py  demo_dynamics.py  demo_filters.py  demo_grainflow.py  demo_modulation.py  demo_ops.py  demo_pitch.py  demo_resample.py  demo_reverb.py  demo_spectral.py  demo_spectral_extra.py  demo_synthesis.py
src/cydsp/: __init__.py  __main__.py  _cli.py  _core.cpp  _core.pyi  _core_choc.cpp  _core_common.h  _core_daisysp.cpp  _core_hisstools.cpp  _core_madronalib.cpp  _core_signalsmith.cpp  _core_stk.cpp  _helpers.py  analysis.py  buffer.py  dsp.py  effects.py  io.py  ops.py  spectral.py  stream.py  synthesis.py
tests/: test_analysis.py  test_buffer.py  test_cli.py  test_cydsp.py  test_daisysp.py  test_delay.py  test_dsp.py  test_effects.py  test_envelopes.py  test_fft.py  test_filters.py  test_grainflow.py  test_hisstools.py  test_io.py  test_madronalib.py  test_mix.py  test_ops.py  test_rates.py  test_spectral.py  test_spectral_dsp.py  test_stk.py  test_stream.py  test_synthesis.py
